--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     },
     "hooks": {
       "init": [
-        "./lib/hooks/predeploy"
+        "./lib/hooks/init-predeploy"
       ],
       "prerun": [
         "./lib/hooks/prerun-hello"
