chore: Disable auto-formatting on save in VSCode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,7 @@
     "**/bin": true
   },
   "editor.tabSize": 2,
-  "editor.formatOnSave": true,
+  "editor.formatOnSave": false,
   "rewrap.wrappingColumn": 80,
   "codeBuilder.showWelcomePage": false  
 }
